# FlowDetection

./: .gitignore  README.md  environment.yaml  environment_minimal.yaml  image_results_hundred.xlsx  pyproject.toml  requirements-experimental.txt  requirements.txt
documents/: 2020-2023 Photo Review Log - STORM EVENTS 11202024.xlsx  Flow Detection Experiment Notes 2024-12-05.docx  borgrwhelper_agentlogs.txt  edge128_batch24_epoch30_unlabeled-analysis.xlsx
examples/: __init__.py  concise_run.py  config_test.py  evaluate_from_file.py  evaluate_unlabeled.py  hyperparam_manual.yaml  hyperparam_scikeras.py  image_results.xlsx  model001.yaml  test.txt  train_and_save.py  train_and_save_config.yaml  unlabeled_image_results_2020.xlsx  unlabeled_image_results_2021.xlsx
models/: edge128_batch24_epoch30_unlabeled-analysis2.xlsx  edge128batch24epoch30_CamB_2023_06.txt  edge128batch24epoch30_evaluateunlabeled.txt  edge128batch24epoch30_evaluateunlabeled2.txt  image_results_hundred2.xlsx  model001_unlabeled_camera_b  model001_unlabeled_camera_b.csv  model001_unlabeled_camera_b_with_analysis.xlsx
src/: concise_run.py  config.py  config_test.py  config_test_config.yaml  data.py  evaluate_from_file.py  evaluate_unlabeled.py  evaluation.py  hyperparam_manual.py  hyperparam_scikeras.py  hyperparam_scikeras.yaml  image_results_hundred.xlsx  output.txt  smoke_test.py  train_and_save.py  training.py  ~$image_results.xlsx
src/FlowDetection/: __init__.py  config.py  data.py  evaluation.py  filesystem.py  runtime.py  training.py
src/marguerite/: README.md
